# omicidx-parsers

./: .buildinfo  .dir-locals.el  .gitignore  .projectile  BigQuery.rst~  Dockerfile  MANIFEST.in  README.md  bigquery_stuff.py  bigquery_transform.py  biosample_es_index.py  bq_omicidx_etl_experiment.json  bq_omicidx_etl_run.json  bq_omicidx_etl_sample.json  bq_omicidx_etl_study.json  cli.html  cli.rst  cli.rst~  config.example.cfg  config.example.json  external.dot~  genindex.html  genomic_metadata.html  genomic_metadata.rst~  index.html  index.rst  index.xml  intro.html  modules.html  objects.inv  omicidx.bigquery_utils.html  omicidx.bigquery_utils.rst  omicidx.data.bigquery_schemas.html  omicidx.data.html  omicidx.db.html  omicidx.gcs_utils.html  omicidx.gcs_utils.rst  omicidx.geo.html  omicidx.geometa.html  omicidx.lambda_handlers.html  (+32 more)
_modules/: index.html
_sources/: omicidx.db.rst.txt  omicidx.geo.rst.txt  omicidx.geometa.rst.txt  omicidx.model.public.rst.txt  omicidx.mti.rst.txt  omicidx.rst.txt  omicidx.schema_tools.rst.txt  omicidx.sra.rst.txt
adding-content/: index.xml
docs/: .gitignore  Makefile  README  api.rst  conf.py  config.toml  index.rst  make.bat  mkdocs.yml  omicidx_arch.dot
doctrees/: Bigquery.doctree  about.doctree  cli.doctree  environment.pickle  genomic_metadata.doctree  index.doctree  intro.doctree  modules.doctree  omicidx.bigquery_utils.doctree  omicidx.biosample.doctree  omicidx.data.bigquery_schemas.doctree  omicidx.data.doctree  omicidx.db.doctree  omicidx.doctree  omicidx.elasticsearch_utils.doctree  omicidx.gcs_utils.doctree  omicidx.geo.doctree  omicidx.geometa.doctree  omicidx.lambda_handlers.doctree  omicidx.model.doctree  omicidx.model.etl.doctree  omicidx.model.etl_schema.doctree  omicidx.model.public.doctree  omicidx.models.doctree  omicidx.mti.doctree  omicidx.ontologies.doctree  omicidx.schema.doctree  omicidx.schema_tools.doctree  omicidx.scratch.doctree  omicidx.scripts.cli.doctree  omicidx.scripts.doctree  omicidx.scripts.omicidx.doctree  omicidx.scripts.sra_entity_to_json.doctree  omicidx.sra.doctree  omicidx.sra.ebiutils.doctree  omicidx.sra.etl.doctree  omicidx.sra.pydantic_models.doctree  omicidx.sra_parsers.doctree  omicidx.utils.doctree
elasticsearch/: bulk_index_example.sh  elasticsearch_restclient.txt  elasticsearch_setup.sh  sra_experiment_index_mapping.json  sra_full2_mapping.json  sra_full2_test_mapping.json  sra_full_index_mapping.json  sra_index_mapping.json  sra_run_index_mapping.json  sra_run_joined_mapping.json  sra_sample_index_mapping.json  sra_study_index_mapping.json
getting-started/: index.html  index.xml
html/: .buildinfo  Bigquery.html  about.html  genindex.html  genomic_metadata.html  omicidx.bigquery_utils.html  omicidx.biosample.html  omicidx.data.bigquery_schemas.html  omicidx.data.html  omicidx.elasticsearch_utils.html  omicidx.gcs_utils.html  omicidx.html  omicidx.model.etl.html  omicidx.model.etl_schema.html  omicidx.model.html  omicidx.model.public.html  omicidx.models.html  omicidx.ontologies.html  omicidx.schema.html  omicidx.schema_tools.html  omicidx.scratch.html  omicidx.scripts.cli.html  omicidx.scripts.html  omicidx.scripts.sra_entity_to_json.html  omicidx.sra.ebiutils.html  omicidx.sra.etl.html  omicidx.sra.html  omicidx.sra.pydantic_models.html  py-modindex.html  search.html  searchindex.js
latex/: omicidx.aux  omicidx.fdb_latexmk  omicidx.fls  omicidx.idx  omicidx.ilg  omicidx.ind  omicidx.out  omicidx.tex  omicidx.toc
license/: index.html  index.xml
omicidx/: __init__.py  bigquery_utils.py  biosample.py  db.py  elasticsearch_utils.py  gcs_utils.py  geometa.py  json_models.py  lambda_handlers.py  models.py  sra_parsers.py  utils.py
pyspark/: README.md
roadmap/: index.html  index.xml
scala/: build.sbt
scripts/: Makefile  es_json_indexer.py  insert_records_to_postgresql.py  mirror_medline_to_s3.py  run_pipeline.sh  sra_entity_to_json.py  sra_mirror_metadata_to_s3.sh
source/: modules.html  omicidx.html  omicidx.sra.html  test.html
spark/: README.md  emr-config.json  emr_bootstrap.sh  sra_etl.py  sra_etl_refactored.py  sra_make_joined_data.py  sra_mirroring_to_dataframe.py  sra_ready_for_es.ipynb  sra_ready_for_es.py  sra_to_es.ipynb  start_cluster.sh  upload_spark_artifacts_to_s3.sh
sql/: add_foreign_keys.sh  copy_biosample_json.sh  copy_fileinfo.sh  copy_sra_accession.sh  copy_sra_json.sh  create_etl_schema.sh  drop_etl_schema.sh  dump_joined_run_to_json.sh  etl_biosample_from_json_to_tables.sh  (+2 more)
(+164 files in other folders)
