[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry]
name = "omicidx"
version = "0.4.1"
readme = "README.md"
description = """The OmicIDX project collects, reprocesses, and then republishes metadata from multiple public genomics repositories. Included are the NCBI SRA, Biosample, and GEO databases. Publication is via the cloud data warehouse platform Bigquery, a set of performant search and retrieval APIs, and a set of json-format files for easy incorporation into other projects."""
authors = ["Sean Davis <seandavi@gmail.com>"]
license = "MIT"
repository = "https://github.com/omicidx/omicidx-parsers"
keywords = ["genomics", "bioinformatics", "open data", "API"]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "*"
requests = "^2.22"
boto3 = "^1.9"
Click = "*"
sd_cloud_utils = "*"
ujson = "^1.35"
sqlalchemy = "^1.3"
biopython = "1.75"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
jupyterlab = "^1.0"
mypy = "^0.720.0"
pytest = "^5.1"
rope = "^0.14.0"
pytest-sugar = "^0.9.2"
pytest-cov = "^2.8.1"
yapf = "^0.28.0"
alembic = "^1.3"
sqlalchemyviz = "^0.4.0"
eralchemy = {version = "^1.2", optional = true}
pydoc-markdown = "^2.0"

[tool.poetry.extras]
eralchemy = ["eralchemy"]

[tool.poetry.scripts]
omicidx_tool = 'omicidx.scripts.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
