[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry]
name = "omicidx"
version = "1.2.4"
readme = "README.md"
description = """The OmicIDX project collects, reprocesses, and then republishes metadata from multiple public genomics repositories. Included are the NCBI SRA, Biosample, and GEO databases. Publication is via the cloud data warehouse platform Bigquery, a set of performant search and retrieval APIs, and a set of json-format files for easy incorporation into other projects."""
authors = ["Sean Davis <seandavi@gmail.com>"]
license = "MIT"
repository = "https://github.com/omicidx/omicidx-parsers"
keywords = ["genomics", "bioinformatics", "open data", "API"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pydantic = "*"
requests = "^2.22"
Click = "*"
sd_cloud_utils = "*"
biopython = "1.75"
sphinx_click = "^2.3.2"
aiohttp = "^3.6.2"
tenacity = "^8.0.1"
pendulum = "^2.1.2"
httpx = "^0.22.0"
trio = "^0.19.0"

[tool.poetry.dev-dependencies]
mypy = "^0.720.0"
pytest = "^5.1"
rope = "^0.14.0"
pytest-sugar = "^0.9.2"
pytest-cov = "^2.8.1"
yapf = "^0.28.0"
pydoc-markdown = "^2.0"
sphinx = "^3.0.4"
ipython = "^8.0.1"

[tool.poetry.scripts]
omicidx_tool = 'omicidx.scripts.geo:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
